--- a/TKV2025_soubory/sheet028.htm
+++ b/TKV2025_soubory/sheet028.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -1085,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>28</td>
+  <td class=xl165 style='border-left:none'>29</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
