--- a/TKV2025_soubory/sheet030.htm
+++ b/TKV2025_soubory/sheet030.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>28</td>
+  <td class=xl165 style='border-left:none'>29</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1221,7 @@ else
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1
-  141 Kč</td>
+  112 Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
@@ -1358,7 +1359,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>10200</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>703
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>686
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1586,7 +1587,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>9550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>658
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>642
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1815,7 +1816,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>9400</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>648
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>632
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
@@ -2043,7 +2044,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>613
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>598
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2182,7 +2183,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8850</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>610
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>595
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
