--- a/TKV2025.htm
+++ b/TKV2025.htm
@@ -483,6 +483,7 @@ function fnSetActiveSheet(iSh)
   <x:WindowTopX>32767</x:WindowTopX>
   <x:WindowTopY>32767</x:WindowTopY>
   <x:TabRatio>920</x:TabRatio>
+  <x:HidePivotTableFieldList/>
   <x:ProtectStructure>False</x:ProtectStructure>
   <x:ProtectWindows>False</x:ProtectWindows>
  </x:ExcelWorkbook>
