--- a/TKV2025_soubory/sheet010.htm
+++ b/TKV2025_soubory/sheet010.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12513 style='border-collapse:
- collapse;table-layout:fixed;width:9397pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12610 style='border-collapse:
+ collapse;table-layout:fixed;width:9470pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -269,8 +269,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <tr height=20 style='height:15.0pt'>
@@ -403,11 +403,11 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl180 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - PŘIBYSLAV -
   CELKOVÉ POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1085,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>29</td>
+  <td class=xl165 style='border-left:none'>30</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1220,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>8,2</td>
+  <td class=xl148 style='border-top:none;border-left:none'>8,1</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1349,13 +1349,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>44</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>28400</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>46</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>29700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>25</td>
+  <td class=xl165 style='border-top:none;border-left:none'>26</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1799,8 +1799,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>43</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>16550</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>45</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>17250</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2023,8 +2023,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>33</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>16250</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>35</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>17150</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,8 +2158,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>42</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>13300</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>44</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>13800</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2505,15 +2505,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>11200</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>12200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Ptáček Radim [CZE071042]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>13</td>
+  <td class=xl82 style='border-top:none;border-left:none'>15</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2683,17 +2683,19 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1300</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>32</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10600</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>34</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>11200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2872,9 +2874,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -3061,9 +3065,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>900</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -3252,9 +3259,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -3441,9 +3450,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>600</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -3625,9 +3636,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>500</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -14746,7 +14759,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=128 style='width:96pt'></td>
  </tr>
  <![endif]>
